# AirPressureMonitoringProject

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
notebook/: EDA.ipynb
sensor/: config.py  exception.py  logger.py  utils.py
sensor/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
sensor/configuration/: mongo_db_connection.py
sensor/constant/: database.py
sensor/constant/training_pipeline/: __init__.py
sensor/entity/: artifact_entity.py  config_entity.py
sensor/ml/model/: estimator.py
sensor/pipeline/: training_pipeline.py
sensor/utils/: main_utils.py
